[package]
name = "nested_intervals"
version = "0.2.2"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2018"
description = "nested & overlapping interval set functions, overlap, union, etc"
repository = "https://github.com/TyberiusPrime/nested_intervals"
readme="Readme.md"
keywords=["intervals"]
categories = ["data-structures"]
license = "MIT"
maintenance = { status = "actively-developed" }

[dependencies]
superslice="1.0.0"
itertools = "0.8.0"
