[package]
name = "nested_intervals"
version = "0.4.0"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2018"
description = "nested & overlapping interval set functions, overlap, union, etc"
repository = "https://github.com/TyberiusPrime/nested_intervals"
readme="Readme.md"
keywords=["intervals"]
categories = ["data-structures"]
license = "MIT"

[dependencies]
superslice="1.0.0"
itertools = "0.12.0"
num = "0.4.1"
